# knowai

./: .gitignore  Dockerfile  README.md  agentic_multifile_multiquery_rag.py  agentic_rag.py  agentic_rag_multiquery.py  app.py  app2.py  app_wmp.py  build_vectorstore.py  knowledge_graph_cypher.py  pre.py  pyproject.toml  requirements.txt  test_agentic_rag_multiquery.py  updated_workflow_diagram.md  validation.py  workflow.py  workflow_diagram.md
docs/: ERROR_HANDLING.md  INDIVIDUAL_FILE_PROCESSING.md  NO_CHUNKS_FEEDBACK.md  PROFILING.md  STREAMING.md
example_apps/: analyze_chunking_example.py  app_chat_simple.py  app_wmp.py  vectorstore_example.py
knowai/: __init__.py  agent.py  cli.py  cli_vectorstore.py  core.py  prompts.py  utils.py  vectorstore.py
notebooks/: workflow.ipynb
scripts/: agentic_rag_multiquery.py  build_vectorstore.py  debug_freeze.py  detailed_profile_knowai.py  faiss_to_parquet.py  generate_workflow_diagram.py  performance_comparison.py  profile_knowai.py  rag.py  test_citations.py  test_concurrency_limit.py  test_detailed_responses_ui.py  test_error_handling.py  test_filename_fix.py  test_fixed_hierarchical.py  test_hierarchical_consolidation.py  test_hierarchical_debug.py  test_individual_processing.py  test_no_chunks_feedback.py  test_profile.py  test_progress_in_app.py  test_progress_updates.py  test_streaming.py  test_streaming_client.py  test_token_limit_enforcement.py  test_token_management.py  vectorstore.py
tests/: test_agent.py  test_cli.py  test_core.py  test_mermaid.py  test_prompts.py  test_vectorstore.py
(+6 files in other folders)
